<resources>
    <string name="app_name">Catalina Island Boat Express</string>
    <string name="txtTitle">Catalina Ferry Tickets</string>
    <string name="description">ferry port</string>
    <string name="txtNumberOfTickets">Number of Tickets</string>
    <string name="prompt">Select Destination</string>
    <string name="btnCost">COMPUTE COST</string>
    <string-array name="txtGroup">
        <item>To Catalina Island</item>
        <item>To Long Beach</item>
    </string-array>
</resources>